# pyPWR2

./: .gitignore  .pre-commit-config.yaml  =1.15.2  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: one-way-anova.rst  two-way-anova.rst
pwr/: __init__.py  pwr.py  utils.py
pwr2/: __init__.py  pwr.py  utils.py
test/: test_pwr2.py
tests/: test_pwr2.py
