[project]
name = "pypwr2"
version = "1.0.0"
description = "A Python implementation of the PWR2 package in R for power and sample size analysis"
authors = [
    {name = "Conor McNamara", email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["statistics", "power-analysis", "anova", "sample-size", "statistical-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "scipy>=1.15.2,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "zuban",
    "ruff>=0.6.0,<1.0.0",
    "pre-commit>=3.8.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/ConorMcNamara/pyPWR2"
Repository = "https://github.com/ConorMcNamara/pyPWR2"
Issues = "https://github.com/ConorMcNamara/pyPWR2/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pwr2"]

[tool.pytest.ini_options]
pythonpath = [".", "pwr2"]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=pwr2",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pwr2"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.zuban]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
strict = true
exclude_gitignore = true
mode = "default"  # Or "mypy"

# Recommended (and the default) for untyped code
untyped_strict_optional = true

# Mypy's default is "any", Zuban's "inferred"
untyped_function_return_mode = "inferred"

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # function name should be lowercase (R package compatibility)
    "N803",   # argument name should be lowercase (R package compatibility)
    "N806",   # variable in function should be lowercase (R package compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pwr2"]
